@@ -51,6 +51,7 @@ dependencies {
   compile sillib_dep
   compile techguns_dep
   compile reforged_dep
+  compile coroutil_dep
   compile "tenshilib:TenshiLib:1.12.2:${tenshilib_version}"
 }
 
