@@ -13,4 +13,5 @@ scalhealth_dep=scaling-health:ScalingHealth-1.12.2:1.3.32:134
 sillib_dep=silent-lib:SilentLib-1.12.2:3.0.10:161
 techguns_dep=techguns:techguns:1.12.2:2.0.1.2_1
 reforged_dep=reforged:Reforged:0.7.5:1.12+
+coroutil_dep=coroutil:coroutil:1.12.1:1.2.36
 tenshilib_version=1.2.3
